--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx.media.jar",
         "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx.swing.jar",
         "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx.web.jar",
-        "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar"
+        "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar",
+        "/Library/javafx-sdk-11.0.2_4/lib/**/*.jar"
     ]
 }
