--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx.swing.jar",
         "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx.web.jar",
         "c:\\Program Files\\AdoptOpenJDK\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar",
-        "/Users/kayleenam/School/javafx-sdk-11.0.2/**/*.jar"
+        "/Users/kayleenam/School/javafx-sdk-11.0.2/**/*.jar",
+        "/Users/annie/Documents/Intro_to_CS_Java/javafx-sdk-11.0.2/lib/**/*.jar"
     ]
 }
